# socker

./: .dir-locals.el  Cargo.toml  README.md
socker/: Cargo.toml
socker-common/: Cargo.toml
socker-common/src/: lib.rs
socker-ebpf/: Cargo.toml
socker-ebpf/src/: binding.rs  main.rs
socker/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
